typescript/checker/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts.stderr
error: TS2362 {
    span: Span {
        lo: BytePos(
            186,
        ),
        hi: BytePos(
            190,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:13:11
   |
13 | var ra1 = null * a;
   |           ^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            206,
        ),
        hi: BytePos(
            210,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:14:11
   |
14 | var ra2 = null * b;
   |           ^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            226,
        ),
        hi: BytePos(
            230,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:15:11
   |
15 | var ra3 = null * 1;
   |           ^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            246,
        ),
        hi: BytePos(
            250,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:16:11
   |
16 | var ra4 = null * E.a;
   |           ^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            272,
        ),
        hi: BytePos(
            276,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:17:15
   |
17 | var ra5 = a * null;
   |               ^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            292,
        ),
        hi: BytePos(
            296,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:18:15
   |
18 | var ra6 = b * null;
   |               ^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            312,
        ),
        hi: BytePos(
            316,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:19:15
   |
19 | var ra7 = 0 * null;
   |               ^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            334,
        ),
        hi: BytePos(
            338,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:20:17
   |
20 | var ra8 = E.b * null;
   |                 ^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            365,
        ),
        hi: BytePos(
            369,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:23:11
   |
23 | var rb1 = null / a;
   |           ^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            385,
        ),
        hi: BytePos(
            389,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:24:11
   |
24 | var rb2 = null / b;
   |           ^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            405,
        ),
        hi: BytePos(
            409,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:25:11
   |
25 | var rb3 = null / 1;
   |           ^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            425,
        ),
        hi: BytePos(
            429,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:26:11
   |
26 | var rb4 = null / E.a;
   |           ^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            451,
        ),
        hi: BytePos(
            455,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:27:15
   |
27 | var rb5 = a / null;
   |               ^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            471,
        ),
        hi: BytePos(
            475,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:28:15
   |
28 | var rb6 = b / null;
   |               ^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            491,
        ),
        hi: BytePos(
            495,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:29:15
   |
29 | var rb7 = 0 / null;
   |               ^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            513,
        ),
        hi: BytePos(
            517,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:30:17
   |
30 | var rb8 = E.b / null;
   |                 ^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            544,
        ),
        hi: BytePos(
            548,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:33:11
   |
33 | var rc1 = null % a;
   |           ^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            564,
        ),
        hi: BytePos(
            568,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:34:11
   |
34 | var rc2 = null % b;
   |           ^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            584,
        ),
        hi: BytePos(
            588,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:35:11
   |
35 | var rc3 = null % 1;
   |           ^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            604,
        ),
        hi: BytePos(
            608,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:36:11
   |
36 | var rc4 = null % E.a;
   |           ^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            630,
        ),
        hi: BytePos(
            634,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:37:15
   |
37 | var rc5 = a % null;
   |               ^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            650,
        ),
        hi: BytePos(
            654,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:38:15
   |
38 | var rc6 = b % null;
   |               ^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            670,
        ),
        hi: BytePos(
            674,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:39:15
   |
39 | var rc7 = 0 % null;
   |               ^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            692,
        ),
        hi: BytePos(
            696,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:40:17
   |
40 | var rc8 = E.b % null;
   |                 ^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            723,
        ),
        hi: BytePos(
            727,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:43:11
   |
43 | var rd1 = null - a;
   |           ^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            743,
        ),
        hi: BytePos(
            747,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:44:11
   |
44 | var rd2 = null - b;
   |           ^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            763,
        ),
        hi: BytePos(
            767,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:45:11
   |
45 | var rd3 = null - 1;
   |           ^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            783,
        ),
        hi: BytePos(
            787,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:46:11
   |
46 | var rd4 = null - E.a;
   |           ^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            809,
        ),
        hi: BytePos(
            813,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:47:15
   |
47 | var rd5 = a - null;
   |               ^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            829,
        ),
        hi: BytePos(
            833,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:48:15
   |
48 | var rd6 = b - null;
   |               ^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            849,
        ),
        hi: BytePos(
            853,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:49:15
   |
49 | var rd7 = 0 - null;
   |               ^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            871,
        ),
        hi: BytePos(
            875,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:50:17
   |
50 | var rd8 = E.b - null;
   |                 ^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            903,
        ),
        hi: BytePos(
            907,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:53:11
   |
53 | var re1 = null << a;
   |           ^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            924,
        ),
        hi: BytePos(
            928,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:54:11
   |
54 | var re2 = null << b;
   |           ^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            945,
        ),
        hi: BytePos(
            949,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:55:11
   |
55 | var re3 = null << 1;
   |           ^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            966,
        ),
        hi: BytePos(
            970,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:56:11
   |
56 | var re4 = null << E.a;
   |           ^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            994,
        ),
        hi: BytePos(
            998,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:57:16
   |
57 | var re5 = a << null;
   |                ^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1015,
        ),
        hi: BytePos(
            1019,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:58:16
   |
58 | var re6 = b << null;
   |                ^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1036,
        ),
        hi: BytePos(
            1040,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:59:16
   |
59 | var re7 = 0 << null;
   |                ^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1059,
        ),
        hi: BytePos(
            1063,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:60:18
   |
60 | var re8 = E.b << null;
   |                  ^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            1091,
        ),
        hi: BytePos(
            1095,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:63:11
   |
63 | var rf1 = null >> a;
   |           ^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            1112,
        ),
        hi: BytePos(
            1116,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:64:11
   |
64 | var rf2 = null >> b;
   |           ^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            1133,
        ),
        hi: BytePos(
            1137,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:65:11
   |
65 | var rf3 = null >> 1;
   |           ^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            1154,
        ),
        hi: BytePos(
            1158,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:66:11
   |
66 | var rf4 = null >> E.a;
   |           ^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1182,
        ),
        hi: BytePos(
            1186,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:67:16
   |
67 | var rf5 = a >> null;
   |                ^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1203,
        ),
        hi: BytePos(
            1207,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:68:16
   |
68 | var rf6 = b >> null;
   |                ^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1224,
        ),
        hi: BytePos(
            1228,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:69:16
   |
69 | var rf7 = 0 >> null;
   |                ^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1247,
        ),
        hi: BytePos(
            1251,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:70:18
   |
70 | var rf8 = E.b >> null;
   |                  ^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            1280,
        ),
        hi: BytePos(
            1284,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:73:11
   |
73 | var rg1 = null >>> a;
   |           ^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            1302,
        ),
        hi: BytePos(
            1306,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:74:11
   |
74 | var rg2 = null >>> b;
   |           ^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            1324,
        ),
        hi: BytePos(
            1328,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:75:11
   |
75 | var rg3 = null >>> 1;
   |           ^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            1346,
        ),
        hi: BytePos(
            1350,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:76:11
   |
76 | var rg4 = null >>> E.a;
   |           ^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1376,
        ),
        hi: BytePos(
            1380,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:77:17
   |
77 | var rg5 = a >>> null;
   |                 ^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1398,
        ),
        hi: BytePos(
            1402,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:78:17
   |
78 | var rg6 = b >>> null;
   |                 ^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1420,
        ),
        hi: BytePos(
            1424,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:79:17
   |
79 | var rg7 = 0 >>> null;
   |                 ^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1444,
        ),
        hi: BytePos(
            1448,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:80:19
   |
80 | var rg8 = E.b >>> null;
   |                   ^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            1475,
        ),
        hi: BytePos(
            1479,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:83:11
   |
83 | var rh1 = null & a;
   |           ^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            1495,
        ),
        hi: BytePos(
            1499,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:84:11
   |
84 | var rh2 = null & b;
   |           ^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            1515,
        ),
        hi: BytePos(
            1519,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:85:11
   |
85 | var rh3 = null & 1;
   |           ^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            1535,
        ),
        hi: BytePos(
            1539,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:86:11
   |
86 | var rh4 = null & E.a;
   |           ^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1561,
        ),
        hi: BytePos(
            1565,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:87:15
   |
87 | var rh5 = a & null;
   |               ^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1581,
        ),
        hi: BytePos(
            1585,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:88:15
   |
88 | var rh6 = b & null;
   |               ^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1601,
        ),
        hi: BytePos(
            1605,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:89:15
   |
89 | var rh7 = 0 & null;
   |               ^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1623,
        ),
        hi: BytePos(
            1627,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:90:17
   |
90 | var rh8 = E.b & null;
   |                 ^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            1654,
        ),
        hi: BytePos(
            1658,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:93:11
   |
93 | var ri1 = null ^ a;
   |           ^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            1674,
        ),
        hi: BytePos(
            1678,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:94:11
   |
94 | var ri2 = null ^ b;
   |           ^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            1694,
        ),
        hi: BytePos(
            1698,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:95:11
   |
95 | var ri3 = null ^ 1;
   |           ^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            1714,
        ),
        hi: BytePos(
            1718,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:96:11
   |
96 | var ri4 = null ^ E.a;
   |           ^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1740,
        ),
        hi: BytePos(
            1744,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:97:15
   |
97 | var ri5 = a ^ null;
   |               ^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1760,
        ),
        hi: BytePos(
            1764,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:98:15
   |
98 | var ri6 = b ^ null;
   |               ^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1780,
        ),
        hi: BytePos(
            1784,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:99:15
   |
99 | var ri7 = 0 ^ null;
   |               ^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1802,
        ),
        hi: BytePos(
            1806,
        ),
        ctxt: #0,
    },
}
   --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:100:17
    |
100 | var ri8 = E.b ^ null;
    |                 ^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            1833,
        ),
        hi: BytePos(
            1837,
        ),
        ctxt: #0,
    },
}
   --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:103:11
    |
103 | var rj1 = null | a;
    |           ^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            1853,
        ),
        hi: BytePos(
            1857,
        ),
        ctxt: #0,
    },
}
   --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:104:11
    |
104 | var rj2 = null | b;
    |           ^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            1873,
        ),
        hi: BytePos(
            1877,
        ),
        ctxt: #0,
    },
}
   --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:105:11
    |
105 | var rj3 = null | 1;
    |           ^^^^

error: TS2362 {
    span: Span {
        lo: BytePos(
            1893,
        ),
        hi: BytePos(
            1897,
        ),
        ctxt: #0,
    },
}
   --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:106:11
    |
106 | var rj4 = null | E.a;
    |           ^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1919,
        ),
        hi: BytePos(
            1923,
        ),
        ctxt: #0,
    },
}
   --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:107:15
    |
107 | var rj5 = a | null;
    |               ^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1939,
        ),
        hi: BytePos(
            1943,
        ),
        ctxt: #0,
    },
}
   --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:108:15
    |
108 | var rj6 = b | null;
    |               ^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1959,
        ),
        hi: BytePos(
            1963,
        ),
        ctxt: #0,
    },
}
   --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:109:15
    |
109 | var rj7 = 0 | null;
    |               ^^^^

error: TS2363 {
    span: Span {
        lo: BytePos(
            1981,
        ),
        hi: BytePos(
            1985,
        ),
        ctxt: #0,
    },
}
   --> $DIR/tests/conformance/expressions/binaryOperators/arithmeticOperator/arithmeticOperatorWithNullValueAndValidOperands.ts:110:17
    |
110 | var rj8 = E.b | null;
    |                 ^^^^

